--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
